fix menu flickering on mobile resize

--- a/src/Components/SideNavigation.css
+++ b/src/Components/SideNavigation.css
@@ -27,6 +27,15 @@
     display: none;
   }
 
+  .is-active {
+    transform: translateX(0);
+    transition: transform .5s ease-in-out;
+  }
+
+  .menu-mobile {
+    transform: translateX(-999px);
+  }
+
   .menu {
     position: fixed;
     width: 100%;
@@ -34,8 +43,6 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    transform: translateX(-999px);
-    transition: transform .5s ease-in-out;
   }
 
   .menu-toggle {
@@ -124,7 +131,7 @@
       flex-direction: row;
       height: auto;
       justify-content: space-around;
-      transform: initial !important;
+      transform: initial;
     }
   
     .menu > h5 {
